; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cagg.c_zfAggSendAddbaRequest.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cagg.c_zfAggSendAddbaRequest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZM_LV_0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Alloc mm buf Fail!\00", align 1
@ZM_SUCCESS = common dso_local global i32 0, align 4
@ZM_INTERNAL_ALLOC_BUF = common dso_local global i32 0, align 4
@err = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfAggSendAddbaRequest(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca [25 x i32], align 16
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %11, align 4
  store i32 32, i32* %12, align 4
  store i32 0, i32* %14, align 4
  store i32 0, i32* %16, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32* @zfwBufAllocate(i32* %17, i32 1024)
  store i32* %18, i32** %10, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %4
  %21 = load i32, i32* @ZM_LV_0, align 4
  %22 = call i32 @zm_msg0_mm(i32 %21, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* @ZM_SUCCESS, align 4
  store i32 %23, i32* %5, align 4
  br label %71

24:                                               ; preds = %4
  %25 = load i32, i32* %12, align 4
  store i32 %25, i32* %11, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @zfAggSetAddbaFrameBody(i32* %26, i32* %27, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %11, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* %11, align 4
  %35 = call i32 @zfwBufSetSize(i32* %32, i32* %33, i32 %34)
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = getelementptr inbounds [25 x i32], [25 x i32]* %13, i64 0, i64 0
  %39 = load i32, i32* %11, align 4
  %40 = load i32, i32* %12, align 4
  %41 = sub nsw i32 %39, %40
  %42 = load i32*, i32** %10, align 8
  %43 = load i32, i32* %14, align 4
  %44 = load i32, i32* %16, align 4
  %45 = call i32 @zfAggGenAddbaHeader(i32* %36, i32* %37, i32* %38, i32 %41, i32* %42, i32 %43, i32 %44)
  store i32 0, i32* %15, align 4
  br label %46

46:                                               ; preds = %61, %24
  %47 = load i32, i32* %15, align 4
  %48 = load i32, i32* %12, align 4
  %49 = ashr i32 %48, 1
  %50 = icmp slt i32 %47, %49
  br i1 %50, label %51, label %64

51:                                               ; preds = %46
  %52 = load i32*, i32** %6, align 8
  %53 = load i32*, i32** %10, align 8
  %54 = load i32, i32* %15, align 4
  %55 = mul nsw i32 %54, 2
  %56 = load i32, i32* %15, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds [25 x i32], [25 x i32]* %13, i64 0, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @zmw_tx_buf_writeh(i32* %52, i32* %53, i32 %55, i32 %59)
  br label %61

61:                                               ; preds = %51
  %62 = load i32, i32* %15, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %15, align 4
  br label %46

64:                                               ; preds = %46
  %65 = load i32*, i32** %6, align 8
  %66 = load i32*, i32** %10, align 8
  %67 = call i32 @zfPutVmmq(i32* %65, i32* %66)
  %68 = load i32*, i32** %6, align 8
  %69 = call i32 @zfPushVtxq(i32* %68)
  %70 = load i32, i32* @ZM_SUCCESS, align 4
  store i32 %70, i32* %5, align 4
  br label %71

71:                                               ; preds = %64, %20
  %72 = load i32, i32* %5, align 4
  ret i32 %72
}

declare dso_local i32* @zfwBufAllocate(i32*, i32) #1

declare dso_local i32 @zm_msg0_mm(i32, i8*) #1

declare dso_local i32 @zfAggSetAddbaFrameBody(i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @zfwBufSetSize(i32*, i32*, i32) #1

declare dso_local i32 @zfAggGenAddbaHeader(i32*, i32*, i32*, i32, i32*, i32, i32) #1

declare dso_local i32 @zmw_tx_buf_writeh(i32*, i32*, i32, i32) #1

declare dso_local i32 @zfPutVmmq(i32*, i32*) #1

declare dso_local i32 @zfPushVtxq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
